@startuml pkm-des-domain-model
!include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Component.puml
hide empty members

title Domain Model for PKM-DES (Database Schema)

entity "profiles" as profiles {
  * id : uuid [PK]
  * role : UserRole (student|admin)
  * first_name : text
  * last_name : text
  * email : text
  * account_status : AccountStatus
  --
  Links 1:1 with Supabase Auth auth.users
}

entity "programs" as programs {
  * id : uuid [PK]
  * name : text
  code : text
}

entity "students" as students {
  * id : uuid [PK]
  * profile_id : uuid [FK -> profiles.id]
  student_id_number : text
  * program_id : uuid [FK -> programs.id]
  * year_level : YearLevel
  * student_type : StudentType
  * enrollment_status : EnrollmentStatus
}

entity "subjects" as subjects {
  * id : uuid [PK]
  * program_id : uuid [FK -> programs.id]
  * course_code : text
  * course_description : text
  * units : integer
  * year_level : YearLevel
  * semester : Semester
}

entity "course_offerings" as course_offerings {
  * id : uuid [PK]
  * program_id : uuid [FK -> programs.id]
  * academic_year : text
  * semester : Semester
  * year_level : YearLevel
  * course_code : text
  * course_description : text
  * units : integer
  * source_document : text
  --
  Client-provided or Registrar-approved term offering.
}

entity "standard_load_sets" as standard_load_sets {
  * id : uuid [PK]
  * program_id : uuid [FK -> programs.id]
  * academic_year : text
  * semester : Semester
  * year_level : YearLevel
  * status : DRAFT|ACTIVE
  * expected_course_count : integer
  * expected_total_units : integer
  * source_document : text
  --
  Explicit Registrar-approved standard-load configuration.
}

entity "enrollments" as enrollments {
  * id : uuid [PK]
  * student_id : uuid [FK -> students.id]
  * program_id : uuid [FK -> programs.id]
  * year_level : YearLevel
  * academic_year : text
  * semester : Semester
  * status : EnrollmentReviewStatus
  * submitted_at : timestamptz
  reviewed_at : timestamptz
  reviewed_by : uuid [FK -> profiles.id]
  remarks : text
}

entity "enrollment_subjects" as enrollment_subjects {
  * id : uuid [PK]
  * enrollment_id : uuid [FK -> enrollments.id]
  subject_id : uuid [FK -> subjects.id, nullable]
  course_offering_id : uuid [FK -> course_offerings.id, nullable]
  * course_code : text [snapshot]
  * course_description : text [snapshot]
  * units : integer [snapshot]
}

entity "official_student_records" as official_student_records {
  * id : uuid [PK]
  student_id_number : text
  * first_name : text
  * last_name : text
  * email : text
  * program_id : uuid [FK -> programs.id]
  * year_level : YearLevel
  * student_type : StudentType
  * enrollment_status : EnrollmentStatus
  --
  Source of truth for account claiming.
}

entity "student_requirements" as student_requirements {
  * id : uuid [PK]
  * student_id : uuid [FK -> students.id]
  * requirement_code : text
  * academic_year : text
  * semester : Semester
  * status : RequirementStatus
  * applicability : RequirementApplicability
  note : text
  verified_at : timestamptz
  verified_by : uuid [FK -> profiles.id]
}

entity "official_role_assignments" as official_role_assignments {
  * id : uuid [PK]
  * profile_id : uuid [FK -> profiles.id]
  * official_role : LIBRARIAN|NURSE|PROGRAM_CHAIR|ACCOUNTANT|DEAN
  program_id : uuid [FK -> programs.id, nullable]
  * active : boolean
  --
  Explicit signing authority; null program_id means global scope.
}

entity "enrollment_clearances" as enrollment_clearances {
  * id : uuid [PK]
  * enrollment_id : uuid [FK -> enrollments.id]
  * clearance_type : STUDENT|LIBRARY|HEALTH|PROGRAM|ACCOUNTING|DEAN
  * status : PENDING|SIGNED|NOT_APPLICABLE|INVALIDATED
}

entity "enrollment_signatures" as enrollment_signatures {
  * id : uuid [PK]
  * enrollment_id : uuid [FK -> enrollments.id]
  * student_id : uuid [FK -> students.id]
  * signer_profile_id : uuid [FK -> profiles.id]
  * signer_role : STUDENT|LIBRARIAN|NURSE|PROGRAM_CHAIR|ACCOUNTANT|DEAN
  * clearance_type : SignatureClearanceType
  * signature_storage_path : text [private PNG]
  * signature_hash : SHA-256
  * document_hash : SHA-256 fingerprint
  * signed_at : timestamptz
  --
  Immutable historical evidence; re-signing inserts a new row.
}

entity "audit_logs" as audit_logs {
  * id : uuid [PK]
  * actor_profile_id : uuid [FK -> profiles.id]
  * action : text
  * target_table : text
  * target_id : uuid
  * created_at : timestamptz
}

profiles "1" -- "0..1" students : has
programs "1" -- "0..*" students : belongs to
programs "1" -- "0..*" subjects : contains
programs "1" -- "0..*" course_offerings : offers
programs "1" -- "0..*" standard_load_sets : configures
students "1" -- "0..*" enrollments : creates
students "1" -- "0..*" student_requirements : has
profiles "1" -- "0..*" student_requirements : verifies
profiles "1" -- "0..*" official_role_assignments : receives
programs "1" -- "0..*" official_role_assignments : scopes
enrollments "1" -- "0..*" enrollment_subjects : includes
enrollments "1" -- "0..*" enrollment_clearances : requires
enrollments "1" -- "0..*" enrollment_signatures : has immutable evidence
profiles "1" -- "0..*" enrollment_signatures : signs as
students "1" -- "0..*" enrollment_signatures : owns
subjects "1" -- "0..*" enrollment_subjects : included in
course_offerings "1" -- "0..*" enrollment_subjects : attached as snapshot
programs "1" -- "0..*" official_student_records : defines
profiles "1" -- "0..*" enrollments : reviews (admin)

note bottom of enrollments
  Unique index ensures one enrollment
  per student per term.
  (academic_year, semester, student_id)
end note

note bottom of standard_load_sets
  Automatic submission reads only an ACTIVE,
  complete set with matching current-term
  course_offerings. Historical workbook rows
  are not promoted automatically.
end note

note right of official_student_records
  Source: supabase/migrations/
  Used during account claim sequence.
end note

note bottom of student_requirements
  Term-aware, status-only verification.
  Health Record Update is applicable only when
  the official source record explicitly confirms Female
  for an Incoming 1st Year Student.
  No medical details or uploaded forms are stored.
end note

@enduml
